update docs for comments endpoint
