# docs/swagger.json
@@ -57,7 +57,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Comment"
+                            "$ref": "#/definitions/models.CreateCommentInput"
                         }
                     }
                 ],
@@ -150,6 +150,15 @@
                 ],
                 "summary": "Update comment",
                 "parameters": [
+                    {
+                        "description": "Update comment",
+                        "name": "models.Comment",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateCommentInput"
+                        }
+                    },
                     {
                         "type": "integer",
                         "description": "ID of comment",
@@ -543,6 +552,20 @@
                 }
             }
         },
+        "models.CreateCommentInput": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "photo_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Photo": {
             "type": "object",
             "required": [
@@ -597,6 +620,14 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.UpdateCommentInput": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         }
